READMEs: modernize all 20 per-binding docs to the consumer funnel + add JS dist node
Rewrote all 19 remaining per-binding READMEs (python was the template) to the same
concise, consumer-first 4-section shape: title + one-liner + repo pointer / Use it
(idiomatic examples incl. side-libraries) / Install it in your project (build the
distributable, engine bundled, idiomatic install) / Develop-test (aeb <lang>/.tests.ae).
Each uses the language's REAL API idiom (read from binding source), ~45-63 lines,
the 47-check conformance count, ABI v7. Dropped feature-by-feature tours and
dev-time shell-out snippets. Trimmed the "node skips (green)" repo-behaviour
caveat from the JVM READMEs (kept the real KOTLIN_HOME / JDK-22+ / Groovy-4
prerequisites).

Fixed an oversight the README pass surfaced: javascript had NO dist node (the
"all 20 bindings" dist fan-out silently dropped it; it produced 16 artifacts +
the fat jar, not 17). Added javascript/.dist.ae — canonical grammar via the JS
SDK's pack() builder (copy.file vendors the engine into native/, javascript.pack
-> phonenumber_ae-<ver>.tgz with the .so inside). Wired into the .dist.ae
aggregator; the smoke gate already globs *.tgz. Verified: tarball contains
package/native/libphonenumber_ae.so.

gitignore per-binding test artifacts (erl_crash.dump, ruby/.bundle, Gemfile.lock).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01G3vYpTfEf6oHj4DeecnKt7